<resources>
    <string name="app_name">新人居</string>
    <string name="network">配网</string>
    <string name="test">调试</string>
    <string name="user">我的</string>
    <string name="ifstr">如果</string>
    <string name="agreement">软件许可协议</string>
    <string name="exit">退出登录</string>
    <string name="net_success">组网完成</string>
    <string name="image_button_content_description">Change state of section</string>
    <string name="scene_icon">场景图标</string>
    <string name="label_scene">智能场景</string>
    <string name="action_add_device">添加设备</string>
    <string name="action_log">查看日志</string>
    <string name="backdrop">背景</string>
    <string name="hint_no_scene">暂无场景，请添加场景</string>
    <string name="action_back">返回</string>
    <string name="label_log">场景日志</string>
    <string name="label_my_scene">我的场景</string>
    <string name="action_cancel">取消</string>
    <string name="label_reorder">场景排序</string>
    <string name="action_save">保存</string>
    <string name="label_local_devices">本地发现的设备</string>
    <string name="log_result_failed">执行失败</string>
    <string name="log_result_succeed">执行成功</string>
    <string name="label_details">失败详情</string>
    <string name="action_execute">执行</string>
    <string name="hint_scene_already_executed">场景已经执行</string>
    <string name="hint_scene_being_firing">正在启动场景…</string>
    <string name="hint_exit_order_first">请先退出当前模式</string>
    <string name="hint_no_data">暂无数据</string>
    <string name="hint_scene_disable">启动失败：场景关闭中</string>
    <string name="hint_scene_offline">启动失败：场景已下线</string>
    <string name="tab_icon">Tab图标</string>
    <string name="scan_type_range_tip">条形码·二维码·快递单</string>
    <string name="scan_title">扫描二维码</string>
    <string name="scan_no_bar_code">该图片未发现二维码信息!</string>
    <string name="scan_hint_text">请将设备二维码放置在识别框中</string>
    <string name="name_album">相册</string>
    <string name="camera_permission_denied">相机权限请求失败，请手动打开</string>
    <string name="scan_decode_failed">二维码解析失败</string>
    <string name="str_room">房间</string>
    <string name="str_security">安防</string>
    <string name="str_pickup">拾音器</string>
    <string name="str_homepage">主页</string>
    <string name="str_add_device">添加</string>
    <string name="str_my_home">小良的家</string>
    <string name="str_common_devices">常用设备</string>
    <string name="str_power_open">已开启</string>
    <string name="str_power_close">已关闭</string>
    <string name="str_more">更多</string>
    <string name="str_one_switch">一键智能开关</string>
    <string name="str_two_switches">两键智能开关</string>
    <string name="str_three_switches">三键智能开关</string>
    <string name="str_electric_equipment">智能电机</string>
    <string name="str_lock">门锁</string>
    <string name="delete_device">设备解绑</string>
    <string name="str_open_operation">打开</string>
    <string name="str_close_operation">关闭</string>
    <string name="str_pause_operation">暂停</string>
    <string name="str_temp_pwd">临时密码</string>
    <string name="str_strategy">策略</string>
    <string name="str_edit">编辑</string>
    <string name="str_delete_strategy">删除</string>
    <string name="str_cancle">取消</string>
    <string name="str_sure">确定</string>
    <string name="str_worn">提示</string>
    <string name="str_nickname">昵称</string>
    <string name="str_delete_content">你确定删除此设备吗?</string>
    <string name="str_nickname_describe">昵称是小良对你的称呼，例如主人、爸爸、妈妈等</string>
    <string name="str_editview_name">请输入6字以内中文</string>
    <string name="str_start_collection">开始采集</string>
    <string name="str_start_collection_tips">请在安静的环境下并与语音面板保持一臂的距离，\n并根据设备的语音提示完成添加</string>
    <string name="sent">已发送</string>
    <string name="lock">门锁</string>
    <string name="str_magnetic">门磁</string>
    <string name="str_infrared">红外</string>
    <string name="str_smoke">烟感</string>
    <string name="str_flooding">水浸</string>
    <string name="str_sense_of_gas">气感</string>
    <string name="str_emergency_button">紧急按钮</string>
    <string name="intruder_alarm">安防设备</string>
    <string name="str_musical_doorbell">音乐门铃</string>
    <string name="str_single_curtain">单路窗帘</string>
    <string name="str_double_curtain">双路窗帘</string>
    <string name="scene_selector">场景面板</string>
    <string name="humidity">湿度</string>
    <string name="temperature">温度</string>
    <string name="voc">VOC</string>
    <string name="str_measure_temp">测量温度</string>
    <string name="str_relative_temp">相对湿度</string>
    <string name="pm_2_point_5">PM2.5</string>
    <string name="co2">二氧化碳</string>
    <string name="illumination">光照度</string>
    <string name="formaldehyde">甲醛</string>
    <string name="str_signal_intensity">信号强度</string>
    <string name="unknown_attribute">未知属性</string>
    <string name="smart_socket">插座</string>
    <string name="unit_humidity">RH</string>
    <string name="unit_temperature">℃</string>
    <string name="unit_voc">g/L</string>
    <string name="unit_co2">ppm</string>
    <string name="unit_illumination">lux</string>
    <string name="unit_formaldehyde">mg/m³</string>
    <string name="uint_cubic_meter">m³</string>
    <string name="unit_empty"> </string>
    <string name="unit_pm">μg/m³</string>
    <string name="unit_voltage">V</string>
    <string name="unit_current">A</string>
    <string name="unit_power">W</string>
    <string name="unit_energy">kWh</string>
    <string name="str_one_touch_board">一键智能开关</string>
    <string name="str_two_touch_board">两键智能开关</string>
    <string name="str_three_touch_board">三键智能开关</string>
    <string name="touch_board">智能开关</string>
    <string name="unknown_device">未知设备</string>
    <string name="str_header_pulling">下拉可以刷新</string>
    <string name="str_header_refreshing">正在刷新…</string>
    <string name="str_header_loading">正在加载…</string>
    <string name="str_header_release">释放立即刷新</string>
    <string name="str_header_finish">刷新完成</string>
    <string name="str_header_failed">刷新失败</string>
    <string name="str_header_update">上次更新 M-d HH:mm</string>
    <string name="str_header_secondary">释放进入二楼</string>
    <string name="str_footer_pulling">上拉加载更多</string>
    <string name="str_footer_release">释放立即加载</string>
    <string name="str_footer_loading">正在加载…</string>
    <string name="str_footer_refreshing">正在刷新…</string>
    <string name="str_footer_finish">加载完成</string>
    <string name="str_footer_failed">加载失败</string>
    <string name="str_footer_nothing">没有更多数据了</string>
    <string name="str_add_condition">添加触发条件</string>
    <string name="str_add_devic">添加设备</string>
    <string name="str_add_sence">添加场景</string>
    <string name="str_add_action">添加触发动作</string>
    <string name="str_delayed">延时</string>
    <string name="str_open_door">门打开</string>
    <string name="str_normal">正常</string>
    <string name="str_abnormal">异常</string>
    <string name="str_syncsence">同步场景</string>
    <string name="str_syncdevname">同步设备</string>
    <string name="str_hours">时</string>
    <string name="str_minute">分</string>
    <string name="str_door_tamper_alarm">防拆报警</string>
    <string name="str_door_tampered_opened">防拆且门被打开</string>
    <string name="str_door_low_power">低电量</string>
    <string name="str_door_open_lowbattery">门开且低电量</string>
    <string name="str_door_tamper_lowbattery">防拆且低电量</string>
    <string name="str_door_open_lowbattery_tamper">门开且低电量且防拆</string>
    <string name="str_detected_someone">检测到有人</string>
    <string name="str_water_immersion">有水浸入</string>
    <string name="str_emergency_alarm">紧急报警</string>
    <string name="str_second">秒</string>
    <string name="srt_format_delay_min_and_sec">%1$d分%2$d秒</string>
    <string name="srt_format_delay_second">%1$d秒</string>
    <string name="str_if">如果</string>
    <string name="str_such_as_6_pm">如:晚上6点</string>
    <string name="str_such_as_open_the_door">如:门打开</string>
    <string name="str_such_as_choose_device">请选择设备</string>
    <string name="str_such_as_choose_sence">请选择场景</string>
    <string name="str_meet_any_condition">满足任一条件</string>
    <string name="str_timer_start">定时</string>
    <string name="str_timer_end">定时</string>
    <string name="str_timer">定时</string>
    <string name="str_execute">就执行</string>
    <string name="str_manual_execution">手动执行</string>
    <string name="str_manual_add">手动添加</string>
    <string name="str_trigger_device">设备事件触发</string>
    <string name="str_jurisdiction_device">设备-权限设置</string>
    <string name="str_jurisdiction_sence">场景-权限设置</string>
    <string name="str_create_auto">创建自动化</string>
    <string name="str_a_certain_condition_is_met">如果满足某个条件时</string>
    <string name="str_when_the_living_room_light_is_on">比如:当客厅灯打开时</string>
    <string name="str_add_strategy">添加策略</string>
    <string name="str_select_condition">满足条件</string>
    <string name="str_all">满足所有条件</string>
    <string name="str_any_condition">满足任一条件</string>
    <string name="srt_strategy_name_null_hint">请输入策略名称</string>
    <string name="srt_name_length_exceed_limit">名称长度超过限制</string>
    <string name="srt_please_select_condition_and_target">请选择条件和目标</string>
    <string name="str_repeat">重复</string>
    <string name="str_select_repeat">选择重复次数</string>
    <string name="str_once">仅一次</string>
    <string name="str_everyday">每天</string>
    <string name="str_time">定时触发</string>
    <string name="str_custom">自定义</string>
    <string name="discovering_gateway">正在发现网关,请稍候&#8230;</string>
    <string name="str_connect_gateway">尝试和网关建立连接中,请稍候&#8230;</string>
    <string name="str_electricity_format">电量:%1$s</string>
    <string name="str_lqi">信号:%1$s</string>
    <string name="str_high">强</string>
    <string name="str_middle">中</string>
    <string name="str_small">低</string>
    <string name="str_pm25">PM2.5传感器</string>
    <string name="str_temperature_and_humidity">温湿度传感器</string>
    <string name="environment_detector">环境盒子</string>
    <string name="no_device_selected">未选中任何设备</string>
    <string name="auto_searching">正在搜索,搜索到%1$d个设备</string>
    <string name="add_device_notice">点击自动搜索开始添加设备</string>
    <string name="add_device_limit_notice">搜索到设备后您有60秒的时间添加设备\n超过时间将不能添加</string>
    <string name="motor">电机</string>
    <string name="str_voice_panel">智能语音面板</string>
    <string name="str_add_pickup">点击开始配网，添加您的小良智能语音面板</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="capture_saved">Saved to %s</string>
    <string name="failed">Failed.</string>
    <string name="capture_low_memory">Low storage space. Recording has stopped.</string>
    <string name="storage_used_total">Storage used: %1$d second(s), Total: %2$d second(s)</string>
    <string name="page_index_room_lable_st">%1$s/%2$s 在线</string>
    <string name="page_index_cancel_st">取消</string>
    <string name="page_index_save_st">保存</string>
    <string name="page_index_determine_st">确定</string>
    <string name="page_index_complete">完成</string>
    <string name="page_index_out_message">你确定要退出吗？</string>
    <string name="page_index_main_aert_dialog_title">温馨提示</string>
    <string name="page_index_loading_st">加载中</string>
    <string name="page_index_next_st">下一步</string>
    <string name="page_index_main_title_default_house_name">暂无家</string>
    <string name="page_index_main_more_pop_item_1">扫一扫</string>
    <string name="page_index_main_more_pop_item_2">添加设备</string>
    <string name="page_index_main_more_pop_item_3">新建房间</string>
    <string name="page_index_main_more_pop_item_4">分享家</string>
    <string name="page_index_main_no_house_share_st">您暂时还没有家可供分享哦~</string>
    <string name="page_index_main_house_share_no_st">家庭成员不可分享房间</string>
    <string name="page_index_main_lab_1">常用设备</string>
    <string name="page_index_main_lab_2">房间</string>
    <string name="page_index_room_setting_title_st">房间设置</string>
    <string name="page_index_room_setting_lable_1">房间名称</string>
    <string name="page_index_room_setting_lable_2">房间设备</string>
    <string name="page_index_room_setting_lable_3">删除房间</string>
</resources>