<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <fragment
        android:id="@+id/scan_fragment"
        android:name="com.nader.intelligent.fragment.ScanFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_size"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:paddingLeft="11.5dp"
        android:paddingRight="11.5dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/actionbar_size"
            android:layout_height="@dimen/actionbar_size"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_scan_back_svg" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scan_title"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/album"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_scan_bg"
            android:gravity="center"
            android:text="@string/name_album"
            android:textColor="@color/scan_text_white"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/ic_scan_bg"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/scan_type_range_tip"
            android:textColor="@color/scan_text_white"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>