<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/page_index_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.aliyun.iot.homelink.si.component.TopBar
        android:id="@+id/page_index_room_setting_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        style="@style/TopBar_Style_RoomSetting"
        app:top_bar_title="@string/page_index_room_setting_title_st"
        android:background="#ffffff"
        ></com.aliyun.iot.homelink.si.component.TopBar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ededed"
        >
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/page_index_room_setting_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            fresco:actualImageScaleType="centerCrop"
            fresco:placeholderImage="@drawable/page_index_def_img"
            fresco:failureImage="@drawable/page_index_def_img"
            fresco:placeholderImageScaleType="centerCrop"
            fresco:failureImageScaleType="centerCrop"
            fresco:viewAspectRatio="2"
            android:clickable="false"
            />
        <RelativeLayout
            android:id="@+id/page_index_room_setting_name_background_btn"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/page_index_whit_round_shape"
            android:clickable="false"
            >
            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerInParent="true"
                android:src="@drawable/page_index_edit_ico"
                />
        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/page_index_room_setting_name_chenge_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_64"
        android:background="#FFFFFF"
        >
        <TextView
            android:id="@+id/page_index_room_lable_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_index_room_setting_lable_1"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/page_index_bleck_3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_24"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/page_index_room_lable_1"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_10"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/page_index_room_setting_name_tv"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/page_index_bleck_9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="@dimen/dp_10"
                android:text=""/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_12"
                android:src="@drawable/page_index_next_ico"
                app:tint="@color/page_index_bleck_9"
                />

        </LinearLayout>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/page_index_lin_color"
        ></View>
    <RelativeLayout
        android:id="@+id/page_index_room_setting_equiment_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_64"
        android:background="#FFFFFF"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_index_room_setting_lable_2"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/page_index_bleck_3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_24"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_16"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/page_index_room_setting_count_tv"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/page_index_bleck_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:text="0个设备"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_12"
                android:src="@drawable/page_index_next_ico"
                app:tint="@color/page_index_bleck_9"
                />

        </LinearLayout>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/page_index_lin_color"
        ></View>
    <TextView
        android:id="@+id/page_index_room_setting_del_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:textColor="@drawable/page_index_room_setting_del_text_colors"
        android:text="@string/page_index_room_setting_lable_3"
        android:background="#FFFFFF"
        android:gravity="center"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/dp_20"
        />

</LinearLayout>